# decentralized-p2p-streaming

./: LICENSE  README.md
.github/workflows/: rust.yml
crates/native/: Cargo.toml
crates/native/src/: main.rs  rpc.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/docs/rfcs/: 2023-decentralized-fast-pubsub.md
crates/protocol/src/: addr.rs  chord.rs  lib.rs  network.rs  pubsub.rs  router.rs  runner.rs
crates/protocol/src/chord/: finger_table.rs
crates/protocol/src/protobuf/: message.proto
crates/protocol/src/pubsub/: channel.rs
crates/protocol/src/router/: channel.rs  metric.rs  path.rs
crates/web/: Cargo.toml  Trunk.toml
crates/web/src/: lib.rs  main.rs
