[package]
name = "decentralized-p2p-streaming-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "2.0.0"
poem-openapi = { version = "4.0.0", features = ["swagger-ui"] }
protocol = { package = "decentralized-p2p-streaming-protocol", path = "../protocol" }
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
