[package]
name = "decentralized-p2p-streaming-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
protocol = { package = "decentralized-p2p-streaming-protocol", path = "../protocol" }
yew = { version = "0.21.0", features = ["csr"] }
